--- a/main_thesis.tex
+++ b/main_thesis.tex
@@ -1,7 +1,17 @@
 \documentclass[]{settings/wi-thesis}
+\addbibresource{library.bib}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage[french]{babel}
+\usepackage{float}  % pour H
+\usepackage{tikz}   % pour dessiner
+
 
 % ============================================================
 % Include all relevant information for the title page
+
+
+\begin{document}
 
 \titleThesis{TinyML for Bean Cooking Time Prediction}
 
@@ -23,14 +33,6 @@
 
 % Submission Date
 \date{23.09.2025}
-
-\addbibresource{library.bib}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage[french]{babel}
-
-\begin{document}
-
     \maketitle
 
     \tableofcontents
