--- a/content/03-chapter2.tex
+++ b/content/03-chapter2.tex
@@ -33,22 +33,22 @@ Sauf mention contraire, les versions sont celles déjà fixées (voir Chap.~\ref
 \section{Organisation des sources et données}
 \label{sec:orga_sources}
 
-\paragraph{Arborescence (placeholder).}
-\begin{lstlisting}[language=bash,caption={(Placeholder) Arborescence du projet},label={lst:tree}]
-# >>> CODE ICI <<<
-# Exemple (à adapter):
-# project/
-# ├─ data/
-# │  ├─ raw/           # images brutes
-# │  ├─ splits/        # index train/val/test
-# │  └─ hdf5/          # jeux HDF5 préparés
-# ├─ src/
-# │  ├─ preprocess/    # scripts prétraitement/offline
-# │  ├─ training/      # scripts entrainement
-# │  ├─ export/        # conversion TFLite
-# │  └─ android/       # app Android (Kotlin)
-# └─ reports/          # logs TensorBoard, figures, tableaux
-\end{lstlisting}
+% \paragraph{Arborescence (placeholder).}
+% \begin{lstlisting}[language=bash,caption={(Placeholder) Arborescence du projet},label={lst:tree}]
+% # >>> CODE ICI <<<
+% # Exemple (à adapter):
+% # project/
+% # ├─ data/
+% # │  ├─ raw/           # images brutes
+% # │  ├─ splits/        # index train/val/test
+% # │  └─ hdf5/          # jeux HDF5 préparés
+% # ├─ src/
+% # │  ├─ preprocess/    # scripts prétraitement/offline
+% # │  ├─ training/      # scripts entrainement
+% # │  ├─ export/        # conversion TFLite
+% # │  └─ android/       # app Android (Kotlin)
+% # └─ reports/          # logs TensorBoard, figures, tableaux
+% \end{lstlisting}
 
 \section{Préparation des données}
 \label{sec:pretraitement}
@@ -62,24 +62,24 @@ Le protocole de préparation suit \textit{strictement} le Chapitre~\ref{chap:met
     \item \textbf{Export HDF5} par split avec clés \texttt{images}, \texttt{cooking\_times}.
 \end{enumerate}
 
-\paragraph{Scripts de préparation (placeholders).}
-\begin{lstlisting}[language=Python,caption={(Placeholder) Génération des splits et export HDF5},label={lst:prep_hdf5}]
-# >>> CODE ICI <<<
-# - chargement des chemins images + labels (CSV/JSON)
-# - génération des index train/val/test (seed fixée)
-# - pipeline: crop/resize 224x224 + normalisation [0,1]
-# - augmentation (train uniquement)
-# - scaling Min-Max de Tc avec Tc_min/Tc_max de train
-# - écriture HDF5: images (uint8/float16), labels (float32), meta
-\end{lstlisting}
+% \paragraph{Scripts de préparation (placeholders).}
+% \begin{lstlisting}[language=Python,caption={(Placeholder) Génération des splits et export HDF5},label={lst:prep_hdf5}]
+% # >>> CODE ICI <<<
+% # - chargement des chemins images + labels (CSV/JSON)
+% # - génération des index train/val/test (seed fixée)
+% # - pipeline: crop/resize 224x224 + normalisation [0,1]
+% # - augmentation (train uniquement)
+% # - scaling Min-Max de Tc avec Tc_min/Tc_max de train
+% # - écriture HDF5: images (uint8/float16), labels (float32), meta
+% \end{lstlisting}
 
-\paragraph{Chargement par lot (mémoire contrainte).}
-\begin{lstlisting}[language=Python,caption={(Placeholder) DataLoader/TFDataset depuis HDF5},label={lst:dataloader}]
-# >>> CODE ICI <<<
-# - ouverture HDF5 (mode lecture)
-# - dataset tf.data / generator Python
-# - batching, shuffle (train), prefetch
-\end{lstlisting}
+% \paragraph{Chargement par lot (mémoire contrainte).}
+% \begin{lstlisting}[language=Python,caption={(Placeholder) DataLoader/TFDataset depuis HDF5},label={lst:dataloader}]
+% # >>> CODE ICI <<<
+% # - ouverture HDF5 (mode lecture)
+% # - dataset tf.data / generator Python
+% # - batching, shuffle (train), prefetch
+% \end{lstlisting}
 
 \section{Architectures de modèles}
 \label{sec:modeles}
@@ -91,23 +91,23 @@ Conformément à la méthodologie, nous considérons :
 \end{itemize}
 La tête de régression utilise une sortie scalaire avec activation \texttt{linear}. La régularisation reprend les choix de base (dropout 0{,}3, pénalisation L2 \(\lambda=10^{-4}\)).
 
-\paragraph{CNN personnalisé (placeholder).}
-\begin{lstlisting}[language=Python,caption={(Placeholder) Définition d'un CNN personnalisé (Keras)},label={lst:cnn_custom}]
-# >>> CODE ICI <<<
-# def build_cnn_custom(input_shape=(224,224,3), l2_reg=1e-4, dropout=0.3):
-#     ...
-#     return model
-\end{lstlisting}
+% \paragraph{CNN personnalisé (placeholder).}
+% \begin{lstlisting}[language=Python,caption={(Placeholder) Définition d'un CNN personnalisé (Keras)},label={lst:cnn_custom}]
+% # >>> CODE ICI <<<
+% # def build_cnn_custom(input_shape=(224,224,3), l2_reg=1e-4, dropout=0.3):
+% #     ...
+% #     return model
+% \end{lstlisting}
 
-\paragraph{Modèles pré-entraînés (placeholder).}
-\begin{lstlisting}[language=Python,caption={(Placeholder) Transfer learning MobileNetV2/EfficientNetB0/NASNetMobile},label={lst:transfer}]
-# >>> CODE ICI <<<
-# - chargement du backbone (weights="imagenet", include_top=False, input_shape=224x224x3)
-# - global average pooling
-# - dense(s) + régularisation (L2, dropout)
-# - sortie Dense(1, activation="linear")
-# - stratégie de gel/dégel des couches (fine-tuning)
-\end{lstlisting}
+% \paragraph{Modèles pré-entraînés (placeholder).}
+% \begin{lstlisting}[language=Python,caption={(Placeholder) Transfer learning MobileNetV2/EfficientNetB0/NASNetMobile},label={lst:transfer}]
+% # >>> CODE ICI <<<
+% # - chargement du backbone (weights="imagenet", include_top=False, input_shape=224x224x3)
+% # - global average pooling
+% # - dense(s) + régularisation (L2, dropout)
+% # - sortie Dense(1, activation="linear")
+% # - stratégie de gel/dégel des couches (fine-tuning)
+% \end{lstlisting}
 
 \section{Stratégie d’entraînement}
 \label{sec:entrainement}
@@ -120,21 +120,21 @@ Les hyperparamètres de base sont ceux fixés précédemment (voir Chap.~\ref{ch
     \item Régularisation : \textbf{dropout 0{,}3}, \textbf{L2} \(10^{-4}\).
 \end{itemize}
 
-\paragraph{Compilation/entraînement (placeholders).}
-\begin{lstlisting}[language=Python,caption={(Placeholder) Compilation et fit Keras},label={lst:fit}]
-# >>> CODE ICI <<<
-# model.compile(optimizer=..., loss="mse", metrics=[...])
-# callbacks = [EarlyStopping(...), ReduceLROnPlateau(...), ModelCheckpoint(...)]
-# history = model.fit(train_ds, validation_data=val_ds, epochs=100, callbacks=callbacks)
-\end{lstlisting}
+% \paragraph{Compilation/entraînement (placeholders).}
+% \begin{lstlisting}[language=Python,caption={(Placeholder) Compilation et fit Keras},label={lst:fit}]
+% # >>> CODE ICI <<<
+% # model.compile(optimizer=..., loss="mse", metrics=[...])
+% # callbacks = [EarlyStopping(...), ReduceLROnPlateau(...), ModelCheckpoint(...)]
+% # history = model.fit(train_ds, validation_data=val_ds, epochs=100, callbacks=callbacks)
+% \end{lstlisting}
 
-\paragraph{Journalisation et réplication.}
-\begin{lstlisting}[language=Python,caption={(Placeholder) Seeds, TensorBoard, sauvegarde checkpoints},label={lst:tb}]
-# >>> CODE ICI <<<
-# - fix seeds (python/numpy/tf)
-# - TensorBoard (logs dir)
-# - sauvegarde des checkpoints .keras/.h5
-\end{lstlisting}
+% \paragraph{Journalisation et réplication.}
+% \begin{lstlisting}[language=Python,caption={(Placeholder) Seeds, TensorBoard, sauvegarde checkpoints},label={lst:tb}]
+% # >>> CODE ICI <<<
+% # - fix seeds (python/numpy/tf)
+% # - TensorBoard (logs dir)
+% # - sauvegarde des checkpoints .keras/.h5
+% \end{lstlisting}
 
 \section{Export et optimisation TinyML}
 \label{sec:optim_tinyml}
@@ -142,24 +142,24 @@ Les hyperparamètres de base sont ceux fixés précédemment (voir Chap.~\ref{ch
 \subsection{Conversion TensorFlow Lite (float16)}
 Conformément à la décision validée, la quantification retenue est \textbf{float16} (réduction mémoire, bonne fidélité). 
 
-\paragraph{Conversion (placeholder).}
-\begin{lstlisting}[language=Python,caption={(Placeholder) Conversion TFLite en float16},label={lst:tflite_fp16}]
-# >>> CODE ICI <<<
-# converter = tf.lite.TLiteConverter.from_keras_model(model)
-# converter.optimizations = [tf.lite.Optimize.DEFAULT]
-# converter.target_spec.supported_types = [tf.float16]
-# tflite_model = converter.convert()
-# with open("model_fp16.tflite","wb") as f: f.write(tflite_model)
-\end{lstlisting}
+% \paragraph{Conversion (placeholder).}
+% \begin{lstlisting}[language=Python,caption={(Placeholder) Conversion TFLite en float16},label={lst:tflite_fp16}]
+% # >>> CODE ICI <<<
+% # converter = tf.lite.TLiteConverter.from_keras_model(model)
+% # converter.optimizations = [tf.lite.Optimize.DEFAULT]
+% # converter.target_spec.supported_types = [tf.float16]
+% # tflite_model = converter.convert()
+% # with open("model_fp16.tflite","wb") as f: f.write(tflite_model)
+% \end{lstlisting}
 
-\subsection{Validation TFLite vs. modèle de référence}
-\paragraph{Parité de sortie (placeholder).}
-\begin{lstlisting}[language=Python,caption={(Placeholder) Test de parité Keras vs TFLite sur N échantillons},label={lst:parity}]
-# >>> CODE ICI <<<
-# - charger "model_fp16.tflite" dans un Interpreter
-# - comparer sorties (après inverse Min-Max) vs prédictions Keras
-# - rapporter MAE/RMSE de parité (à insérer dans le chap. Résultats)
-\end{lstlisting}
+% \subsection{Validation TFLite vs. modèle de référence}
+% \paragraph{Parité de sortie (placeholder).}
+% \begin{lstlisting}[language=Python,caption={(Placeholder) Test de parité Keras vs TFLite sur N échantillons},label={lst:parity}]
+% # >>> CODE ICI <<<
+% # - charger "model_fp16.tflite" dans un Interpreter
+% # - comparer sorties (après inverse Min-Max) vs prédictions Keras
+% # - rapporter MAE/RMSE de parité (à insérer dans le chap. Résultats)
+% \end{lstlisting}
 
 \section{Déploiement Android}
 \label{sec:deploiement_android}
@@ -175,23 +175,23 @@ Conformément à la décision validée, la quantification retenue est \textbf{fl
 \subsection{Intégration et inférence}
 Le modèle \texttt{.tflite} est placé dans \texttt{assets/}. Le pipeline embarqué reproduit le prétraitement (redimensionnement \(224\times224\), normalisation cohérente), exécute l’inférence, puis applique l’inversion Min--Max pour restituer \(T_c\) en minutes.
 
-\paragraph{Gradle (placeholder).}
-\begin{lstlisting}[language=groovy,caption={(Placeholder) Dépendances Gradle TFLite},label={lst:gradle}]
-# >>> CODE ICI <<<
-# implementation 'org.tensorflow:tensorflow-lite:2.13.0'
-# (ajouter delegates NNAPI/GPU si nécessaire)
-\end{lstlisting}
+% \paragraph{Gradle (placeholder).}
+% \begin{lstlisting}[language=groovy,caption={(Placeholder) Dépendances Gradle TFLite},label={lst:gradle}]
+% >>> CODE ICI <<<
+% implementation 'org.tensorflow:tensorflow-lite:2.13.0'
+% % (ajouter delegates NNAPI/GPU si nécessaire)
+% \end{lstlisting}
 
-\paragraph{Kotlin: chargement modèle (placeholder).}
-\begin{lstlisting}[language=Java,caption={(Placeholder) Kotlin - chargement et exécution TFLite},label={lst:kotlin_tflite}]
-/* >>> CODE ICI <<<
-// fun loadModel(context): MappedByteBuffer { ... }
-// val interpreter = Interpreter(loadModelFile("model_fp16.tflite"))
-// val inputBuffer: ByteBuffer = preprocessToInputBuffer(bitmap224x224) // normalisation cohérente
-// interpreter.run(inputBuffer, outputBuffer)
-// val y_pred_minutes = inverseMinMax(outputBuffer, Tc_min, Tc_max)
-*/
-\end{lstlisting}
+% \paragraph{Kotlin: chargement modèle (placeholder).}
+% \begin{lstlisting}[language=Java,caption={(Placeholder) Kotlin - chargement et exécution TFLite},label={lst:kotlin_tflite}]
+% /* >>> CODE ICI <<<
+% // fun loadModel(context): MappedByteBuffer { ... }
+% // val interpreter = Interpreter(loadModelFile("model_fp16.tflite"))
+% // val inputBuffer: ByteBuffer = preprocessToInputBuffer(bitmap224x224) // normalisation cohérente
+% // interpreter.run(inputBuffer, outputBuffer)
+% // val y_pred_minutes = inverseMinMax(outputBuffer, Tc_min, Tc_max)
+% */
+% \end{lstlisting}
 
 \paragraph{UI/Workflow (placeholder figure).}
 \begin{figure}[h!]
@@ -206,12 +206,12 @@ Le modèle \texttt{.tflite} est placé dans \texttt{assets/}. Le pipeline embarq
 
 Cette section ne présente \emph{pas} de résultats chiffrés (rapportés au Chap. Résultats), mais liste les artefacts à générer pour chaque modèle testé.
 
-\paragraph{Taille binaire et compatibilité.}
-\begin{lstlisting}[language=bash,caption={(Placeholder) Rapport de taille et compatibilité modèles},label={lst:size_report}]
-# >>> CODE ICI <<<
-# - taille du fichier .tflite (float32 vs float16)
-# - (optionnel) signature TFLite, infos d'entrées/sorties
-\end{lstlisting}
+% \paragraph{Taille binaire et compatibilité.}
+% \begin{lstlisting}[language=bash,caption={(Placeholder) Rapport de taille et compatibilité modèles},label={lst:size_report}]
+% # >>> CODE ICI <<<
+% # - taille du fichier .tflite (float32 vs float16)
+% # - (optionnel) signature TFLite, infos d'entrées/sorties
+% \end{lstlisting}
 
 \paragraph{Tableau comparatif (placeholder valeurs).}
 \begin{table}[h!]
@@ -235,21 +235,21 @@ NASNetMobile     & model\_fp16.tflite & \textit{à insérer} & \textit{à insér
 \section{Reproductibilité et CI (placeholders)}
 \label{sec:ci_repro}
 
-\paragraph{Scripts et seeds.}
-\begin{lstlisting}[language=bash,caption={(Placeholder) Exécution bout-en-bout},label={lst:run_all}]
-# >>> CODE ICI <<<
-# 1) python src/preprocess/make_hdf5.py --config ...
-# 2) python src/training/train.py --model cnn_custom --epochs 100 ...
-# 3) python src/export/to_tflite.py --quant float16 ...
-# 4) python src/validate/parity_tflite.py --n 256 ...
-\end{lstlisting}
+% \paragraph{Scripts et seeds.}
+% \begin{lstlisting}[language=bash,caption={(Placeholder) Exécution bout-en-bout},label={lst:run_all}]
+% # >>> CODE ICI <<<
+% # 1) python src/preprocess/make_hdf5.py --config ...
+% # 2) python src/training/train.py --model cnn_custom --epochs 100 ...
+% # 3) python src/export/to_tflite.py --quant float16 ...
+% # 4) python src/validate/parity_tflite.py --n 256 ...
+% \end{lstlisting}
 
-\paragraph{Tests de non-régression.}
-\begin{lstlisting}[language=Python,caption={(Placeholder) Tests unitaires/parité sortie},label={lst:tests}]
-# >>> CODE ICI <<<
-# - test: même normalisation/offline vs online
-# - test: parité Keras vs TFLite (tolérance MAE)
-\end{lstlisting}
+% \paragraph{Tests de non-régression.}
+% \begin{lstlisting}[language=Python,caption={(Placeholder) Tests unitaires/parité sortie},label={lst:tests}]
+% # >>> CODE ICI <<<
+% # - test: même normalisation/offline vs online
+% # - test: parité Keras vs TFLite (tolérance MAE)
+% \end{lstlisting}
 
 \section{Limites pratiques et points d’attention}
 \label{sec:limites}
